.snakemake/log/2022-09-01T140443.745738.snakemake.log
Full Traceback (most recent call last):
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/__init__.py", line 591, in snakemake
    workflow.include(
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/workflow.py", line 1173, in include
    exec(compile(code, snakefile, "exec"), self.globals)
  File "/home/jeszyman/repos/atac-seq/workflow/int_test.smk", line 102, in <module>
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/workflow.py", line 1173, in include
    exec(compile(code, snakefile, "exec"), self.globals)
  File "/home/jeszyman/repos/atac-seq/workflow/atac.smk", line 304
    				threads = config [ "threads" ]
    				^
SyntaxError: invalid syntax

SyntaxError in line 154 of /home/jeszyman/repos/atac-seq/workflow/atac.smk:
invalid syntax
  File "/home/jeszyman/repos/atac-seq/workflow/int_test.smk", line 79, in <module>
